| Summary: | ASTERISK-26605: codec_opus: Spammed warning when Opus negotiated but codec_opus not loaded. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2016-11-15 16:23:14.000-0600 | Date Closed: | 2016-11-16 17:41:04.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/CodecInterface Core/General |
| Versions: | 14.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When sending a call that negotiates opus into a bridge and codec_opus is not loaded the following is seen:
{noformat} [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus [Nov 3 16:00:19] WARNING[20525][C-00000002]: codec.c:397 ast_codec_samples_count: Unable to calculate samples for codec opus {noformat} | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-16 17:41:05.078-0600 Change 4454 merged by Joshua Colp: codec_opus: Fix warning when Opus negotiated but codec_opus not loaded. [https://gerrit.asterisk.org/4454|https://gerrit.asterisk.org/4454] By: Friendly Automation (friendly-automation) 2016-11-16 19:26:24.113-0600 Change 4455 merged by Joshua Colp: codec_opus: Fix warning when Opus negotiated but codec_opus not loaded. [https://gerrit.asterisk.org/4455|https://gerrit.asterisk.org/4455] By: Friendly Automation (friendly-automation) 2016-11-17 04:56:46.916-0600 Change 4456 merged by Joshua Colp: codec_opus: Fix warning when Opus negotiated but codec_opus not loaded. [https://gerrit.asterisk.org/4456|https://gerrit.asterisk.org/4456] | ||